--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ repository = "https://github.com/dominikwilkowski/vault"
 documentation = "https://docs.rs/vault/"
 keywords = ["macos", "linux", "windows", "vault", "passwords"]
 categories = ["cryptography", "database", "gui"]
+build = "build.rs"
+
+[target.'cfg(windows)'.build-dependencies]
+embed-resource = "2.4.2"
 
 [dependencies]
 anyhow = "1.0"
@@ -17,6 +21,7 @@ base64 = "0.22"
 chrono = "0.4"
 crypto-common = "0.1"
 im = "15.1"
+image = { version = "0.25", default-features = false }
 thiserror = "1.0"
 toml = "0.8"
 url-escape = "0.1"
@@ -37,7 +42,7 @@ features = ["std", "zeroize"]
 [dependencies.floem]
 features = ["editor", "rfd-async-std"]
 git = "https://github.com/lapce/floem.git"
-rev = "c9e3d6a131c63286dc634b27c38b95bde43ed90d"
+rev = "408b8253a5ed9bbcd27ebf8c3c418cc82098fef7"
 
 [dependencies.parking_lot]
 version = "0.12"
