added macos specific options to all windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,21 @@ base64 = "0.22"
 chrono = "0.4"
 crypto-common = "0.1"
 im = "15.1"
-image = { version = "0.25", default-features = false }
 thiserror = "1.0"
 toml = "0.8"
 url-escape = "0.1"
 webbrowser = "1.0"
 zeroize = "1.7"
-rand = { version = "0.8", features = ["getrandom"] }
 sha2 = "0.10"
 dirs = "5.0"
+
+[dependencies.rand]
+version = "0.8"
+features = ["getrandom"]
+
+[dependencies.image]
+version = "0.25"
+default-features = false
 
 [dependencies.aes-gcm-siv]
 version = "0.11"
@@ -42,7 +48,7 @@ features = ["std", "zeroize"]
 [dependencies.floem]
 features = ["editor", "rfd-async-std"]
 git = "https://github.com/lapce/floem.git"
-rev = "408b8253a5ed9bbcd27ebf8c3c418cc82098fef7"
+rev = "e580fde00126ee78ef52e2aa917621ab0b6b7332"
 
 [dependencies.parking_lot]
 version = "0.12"
