--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -24,8 +24,7 @@ jobs:
         run: |
           echo "◉ INSTALL TOML-CLI"
           cargo install toml-cli
-          VERSION=$(toml get Cargo.toml package.version)
-
+          VERSION=$(toml get Cargo.toml package.version | sed 's/"//g')
           echo "◉ VERSION FOUND: $VERSION"
           sed -i "s/{{VERSION}}/$VERSION/" website/index.html
 
