--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
           prefix-key: bundle-macos-v0
           key: bundle-macos-${{ matrix.os }}
 
-      - name: Build ARM app binary
+      - name: Build aarch64 app binary
         run: cargo bundle --release --target aarch64-apple-darwin
 
       - name: Build Intel app binary
@@ -80,7 +80,7 @@ jobs:
           security import certificate.p12 -k build.keychain -P "$MACOS_CERTIFICATE_PWD" -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$MACOS_CI_KEYCHAIN_PWD" build.keychain
 
-          echo "◉ CODE SIGNING ARM"
+          echo "◉ CODE SIGNING AARCH64"
           /usr/bin/codesign --force -s "$MACOS_CERTIFICATE_NAME" --options runtime target/aarch64-apple-darwin/release/bundle/osx/Vault.app -v
 
           echo "◉ CODE SIGNING INTEL"
@@ -95,19 +95,19 @@ jobs:
           echo "◉ CREATE KEYCHAIN PROFILE"
           xcrun notarytool store-credentials "notarytool-profile" --apple-id "$PROD_MACOS_NOTARIZATION_APPLE_ID" --team-id "$PROD_MACOS_NOTARIZATION_TEAM_ID" --password "$PROD_MACOS_NOTARIZATION_PWD"
 
-          echo "◉ CREATING TEMP NOTARIZATION ARM ARCHIVE"
-          ditto -c -k --keepParent "target/aarch64-apple-darwin/release/bundle/osx/Vault.app" "Vault-ARM-${{ matrix.os }}.zip"
+          echo "◉ CREATING TEMP NOTARIZATION AARCH64 ARCHIVE"
+          ditto -c -k --keepParent "target/aarch64-apple-darwin/release/bundle/osx/Vault.app" "VAULT-AARCH64-${{ matrix.os }}.zip"
 
           echo "◉ CREATING TEMP NOTARIZATION INTEL ARCHIVE"
           ditto -c -k --keepParent "target/x86_64-apple-darwin/release/bundle/osx/Vault.app" "Vault-INTEL-${{ matrix.os }}.zip"
 
-          echo "◉ NOTARIZE ARM APP"
-          xcrun notarytool submit "Vault-ARM-${{ matrix.os }}.zip" --keychain-profile "notarytool-profile" --wait
+          echo "◉ NOTARIZE AARCH64 APP"
+          xcrun notarytool submit "VAULT-AARCH64-${{ matrix.os }}.zip" --keychain-profile "notarytool-profile" --wait
 
           echo "◉ NOTARIZE INTEL APP"
           xcrun notarytool submit "Vault-INTEL-${{ matrix.os }}.zip" --keychain-profile "notarytool-profile" --wait
 
-          echo "◉ ATTACH STAPLE TO ARM APP"
+          echo "◉ ATTACH STAPLE TO AARCH64 APP"
           xcrun stapler staple "target/aarch64-apple-darwin/release/bundle/osx/Vault.app"
 
           echo "◉ ATTACH STAPLE TO INTEL APP"
