--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,7 +5,9 @@ defaults:
     shell: bash
 
 on:
-  workflow_call:
+  release:
+    types:
+      - published
   push:
     paths:
       - website/**
@@ -13,7 +15,7 @@ on:
 jobs:
   deploy:
     name: Publish to Github Pages
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
     runs-on: ubuntu-latest
     permissions:
       contents: write
