--- a/vault_db.toml
+++ b/vault_db.toml
@@ -1110,6 +1110,13 @@ value = [[0, \"Some TextLine text\"]]
 
 [[contents.fields]]
 id = 4
+kind = \"Heading\"
+title = \"Non-secret fields below\"
+visible = true
+value = [[0, \"\"]]
+
+[[contents.fields]]
+id = 5
 kind = \"MultiLineSecret\"
 title = \"Notes\"
 visible = true
@@ -1145,14 +1152,14 @@ secret
 notes\"\"\"]]
 
 [[contents.fields]]
-id = 5
+id = 6
 kind = \"TextLineSecret\"
 title = \"Other\"
 visible = true
 value = [[1702851212, \"My other notes\"], [1702851212, \"My other notes\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"], [1702851212, \"stuff\"]]
 
 [[contents.fields]]
-id = 6
+id = 7
 kind = \"TextLineSecret\"
 title = \"More label so we can test long labels\"
 visible = true
