--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -4,6 +4,9 @@ defaults:
   run:
     shell: bash
 
+permissions:
+  contents: read
+
 on:
   release:
     types:
@@ -17,8 +20,6 @@ jobs:
     name: Publish to Github Pages
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'release' }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -32,6 +33,8 @@ jobs:
           sed -i "s/{{VERSION}}/$VERSION/" website/index.html
 
       - name: Deploy
+        permissions:
+          pages: write
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
