--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ documentation = "https://docs.rs/vault/"
 keywords = ["macos", "linux", "windows", "vault", "passwords"]
 categories = ["cryptography", "database", "gui"]
 build = "build.rs"
+rust-version = "1.76"
 
 [target.'cfg(windows)'.build-dependencies]
 embed-resource = "2.4.2"
